Minor Package Edit

--- a/2019-10-07_LING445HW1.tex
+++ b/2019-10-07_LING445HW1.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt, letterpaper]{article} 
 
 \usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage{attachfile}
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage[margin=1in]{geometry}
